# master_proj

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  __init__.py  docker-compose.yaml  docker-compose.yml  master_proj.code-workspace  pyproject.toml
.github/: dependabot.yml
.github/runners/: Dockerfile
.github/workflows/: _combined-workflow.yaml  build-db.yaml  build-figures.yaml  build-python.yaml  compile-latex.yaml  create-release.yaml  database-build.yaml  docker-build.yaml  docker-publish.yaml  evaluate-python.yaml  latex-compile.yaml  lint-python.yaml  main.yaml  publish-docker.yaml  python-build.yaml  ruff.yaml  versioning.yaml
.k8s/: model_pipeline.yaml
database/: Dockerfile  postgres-dev.conf
database/_init_scripts/: 05_01_agg_base_assessment_staging.sql  05_01_agg_base_assessment_weights.sql  05_01_agg_base_course_info.sql  05_01_db_agg_base_interaction_types_staging.sql
database/init-scripts/: 01_db_schemata.sql  02_db_landing.sql  03_00_staging_studentAssessment.sql  03_00_staging_studentRegistration.sql  03_00_staging_studentVle.sql  04_01_dimensions_activity_type.sql  04_01_dimensions_final_result.sql  04_01_dimensions_presentation.sql  04_03_bridges_student_assessment_bridge.sql  04_04_views_v_activity_types_onehot.sql  04_04_views_v_course_assessments.sql  04_04_views_v_region_onehot.sql  04_04_views_v_student_courses.sql  04_db_main.py  06_db_first30.py  07_db_model.py
database/init_scripts/: 00_00_meta.py  01_00_create_su.sql  01_01_create_databases.sql  01_02_create_schemata.sql  01_db_schemata.sql  02_01_landing_create_tables.sql  02_02_landing_load_data.sql  03_01_staging.sql  04_01_dimensions_assessment_type.sql  04_01_dimensions_imd_band.sql  04_01_main_dimensions_create_tables.sql  04_02_main_dimensions_load_data.sql  04_02_measures_course.sql  04_02_measures_student.sql  04_03_01_main_measures_course_info.sql  04_03_02_main_measures_assessment_info.sql  04_03_03_main_measures_student_info.sql  04_03_bridges_vle_course_bridge.sql  04_04_main_bridges_student_assessment_bridge.sql  04_04_main_bridges_student_vle_bridge.sql  04_04_main_bridges_vle_course_bridge.sql  04_04_views_v_assessment_staging.sql  04_04_views_v_info_schema.sql  04_04_views_v_student_grade_calc.sql  04_04_views_v_student_interactions_by_assessments.sql  04_05_main_views_activities.sql  04_05_main_views_assessment.sql  04_05_main_views_course.sql  04_05_main_views_metadata.sql  04_05_main_views_onehot.sql  04_05_main_views_student.sql  05_db_agg.py
database/source_data/: oulad_info_schema.csv
database/tests/: test_database_loads_data.py
dev/: ModelEvaluation.ipynb  images.ipynb  norm_mvsk.py  stats_dev.ipynb
docker/dev/: docker-compose.yml
docker/prod/: docker-compose.yml  postgres-prod.conf
docker/test/: docker-compose.yml  postgres-test.conf
figures/: avg_days_early_by_days_active.eps  schema_diagram_main.drawio
paper/: latexmkrc  makefile  paper.aux  paper.bbl  paper.bib  paper.blg  paper.dvi  paper.fdb_latexmk  paper.fls  paper.tex  paper.toc
presentation/: Presentation.ipynb  reveal.css
queries/agg/base/: activity_interaction_percentiles.sql  assessment_staging.sql  assessment_weights.sql  course_info.sql  course_reg_results.sql  course_student_bands_results.sql  interaction_types_staging.sql  vle_interactions_staging.sql
queries/agg/derivative/: course_activities_top_student_interactions.sql  mean_prod_consec_days.sql  mom_assessments_12.sql  mom_assessments_1234.sql
queries/agg/derivative1/: mean_prod_consec_days.sql  mom_interactions_12.sql  running_assessment_score.sql
queries/agg/derivative2/: mom_assessments_1234.sql  (+3 more)
queries/analysis/: abroca_analysis.sql  eval_features.sql  main_vs_staging_demog.sql  reg_lines.sql  select_eval_v_all_runs_results.sql
queries/feat/: activities.sql  agg_assessment_staging.sql  course_info.sql  demographic_info.sql  feat_student_info.sql  v_clicks_per_activity.sql  v_minmax_scaled_student_info.sql
queries/first30/: all_actions.sql  all_moments.sql  mean_prod_consec_days.sql  mom_activities_clicks.sql  mom_activities_distinct.sql  mom_assessments.sql  mom_assessments_1234.sql  most_popular_activities.sql  student_activities_by_frequency_mode.sql  student_activity_interactions_mode.sql  student_ids.sql  v_assessment_score_calcs.sql
queries/model/: trig_model_types.sql  v_top_per_model.sql
queries/setup/: db_landing.sql
queries/staging/: assessments.sql  courses.sql  studentAssessment.sql  studentInfo.sql  studentRegistration.sql  studentVle.sql  vle.sql
research/paper/: makefile  paper.bib
research/presentation/: Presentation.ipynb
src/: analysis.py  constants.py  db_helpers.py  engine.py  features.py  file_helpers.py  logger.py  main.py  params.py  preprocessing.py  setup.py  utils.py
src/app/: __main__.py  constants.py
src/model/: analysis.py  engine.py  features.py  logger.py  main.py  params.py  preprocessing.py
src/notebooks/: ModelEvaluation.ipynb  elt_exec.ipynb  figures.ipynb  stats.ipynb  venn.ipynb
src/orm/: 02_db_landing.py  04_db_main.py  05_db_agg.py  06_db_first30.py  07_db_model.py  __init__.py  landing.py  model.py
src/queries/: .sqlfluffignore
src/schemas/: landing.py  main.py  staging.py
src/scripts/: 1_db_schemas.py  2_db_landing.py  3_db_staging.py  4_db_main.py  5_db_agg.py  7_db_model.py  add-large-pdfs-to-git-lfs.sh  db_agg.py  db_first30.py  db_landing.py  db_landing_setup.py  db_main.py  db_setup.ipynb  db_staging.py
src/utils/: __init__.py  constants.py  db_helpers.py  elt_config.py  file_helpers.py  get_dataset.py  get_figures.py  utils.py
tests/: conftest.py  test_constants.py  test_db_helpers.py  test_elt_config.py  test_etl.py  test_get_data.py  test_get_figures.py  test_model.py  test_model_analysis.py  test_query_dependencies.py  test_tests.py  test_utils.py
tests/analysis/: test_get_figures.py  test_model_analysis.py
tests/core/: test_constants.py
tests/etl/: test_db_helpers.py  test_elt_config.py  test_load_dataset.py  test_query_dependencies.py
tests/model/: test_model.py  test_utils.py
(+419 files in other folders)
