[tool.poetry]
name = "master-proj"
version = "1.1.1"
description = "code associated w ms stats capstone"
authors = ["Alex Beckwith <57322567+witzbeck@users.noreply.github.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
baycomp = "*"
seaborn = "^0.13"
scikit-posthocs = "*"
alexlib = {git = "http://github.com/witzbeck/alexlib.git", branch = "dev"}

[tool.poetry.group.test.dependencies]
sqlfluff = "^3.0"
pytest = "^8.0"
pytest-cov = "^5.0"
pytest-mock = "^3.12"
pytest-xdist = "^3.5"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29"
tqdm = "^4.66"

[tool.pytest.ini_options]
addopts = [
    "--cov=src", 
    "--cov-report=term-missing", 
    "--cov-fail-under=0", 
    "--cov-branch"
]
testpaths = ["tests"]

[tool.sqlfluff.core]
verbose = 0
dialect = "postgres"
sql_file_exts = ".sql"
max_line_length = 120
processes = 0
rules = "core"

[tool.sqlfluff.layout.type.comma]
line_position = "leading"
spacing_before = "touch"

[tool.sqlfluff.indentation]
indent_unit = "space"
indented_then = false
indented_joins = true
trailing_comments = "after"

[tool.sqlfluff.layout.type.alias_expression]
spacing_before = "align"
align_scope = "file"

[tool.sqlfluff.capitalisation]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.aliasing.table]
aliasing = "implicit"

[tool.sqlfluff.rules.aliasing.column]
aliasing = "implicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
exclude = [
    ".git",
    ".git-rewrite",
    ".ipynb_checkpoints",
    ".pyenv",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "build",
    "dist",
    "site-packages",
]
extend-include = ["*.ipynb"]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]

extend-select = ["I"] # Allow linter to sort imports.
fixable = ["ALL"]     # Allow fix for all enabled rules (when `--fix`) is provided.

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"      # Allow unused variables when underscore-prefixed.
select = ["E4", "E7", "E9", "F", "B", "Q", "W", "C", "I", "C901"]

[tool.ruff.lint.isort]
known-first-party = ["alexlib"]

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,tools}/*" = [
    "E402",
] # Ignore `E402` (import violations) in all `__init__.py` files, and in select subdirectories.

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
